src/tests/NoArrayIndexKey/valid/case#5/index.jsx
import React from 'react';

const MeuComponente = (props) => {
    return (
        <div>
            {foo.flatMap((a) => <Foo key={a} />)}
        </div>
    );
};

export default MeuComponente;

