src/tests/NoArrayIndexKey/invalid/case#9/index.jsx
import React from 'react';

const MeuComponente = (props) => {
    return (
        <div>
            {foo.find((bar, i) => { baz.push(<Foo key={i} />); })}
        </div>
    );
};

export default MeuComponente;

